PostgreSQL driver and application properties

--- a/service/user-service/src/main/resources/application.properties
+++ b/service/user-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# Spring Boot Config for PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/USER_SYSTEM
+spring.datasource.username=postgres_user
+spring.datasource.password=postgres_password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Server properties
+server.servlet.context-path=/api/v1
+server.port=8080
