--- a/service/user-service/src/main/resources/application.properties
+++ b/service/user-service/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 # Spring Boot Config for PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/USER_SYSTEM
-spring.datasource.username=postgres_user
-spring.datasource.password=postgres_password
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://mysql-database.c54vu5cxnk6k.us-east-1.rds.amazonaws.com:3306/USER_SYSTEM
+spring.datasource.username=admin
+spring.datasource.password=admin1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
 
 # Server properties
 server.servlet.context-path=/api/v1
